<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/app_name" />
        
    <item
        android:id="@+id/navigation_checklist"
        android:icon="@drawable/ic_checklist"
        android:title="@string/checklist" />
        
    <item
        android:id="@+id/navigation_record"
        android:icon="@drawable/ic_record"
        android:title="@string/record" />
        
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile" />
        
    <item
        android:id="@+id/navigation_coach"
        android:icon="@drawable/ic_coach"
        android:title="@string/ai_coach" />
</menu>
